--- a/POI_UPV/nbproject/private/private.properties
+++ b/POI_UPV/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/lluis/Library/Application Support/NetBeans/13/build.properties
+user.properties.file=C:\\Users\\javie\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
